# screensaver-mpris-pauser

./: README.md  pyproject.toml  screensaver_mpris_pauser.py
