[tool.poetry]
name = "screensaver-mpris-pauser"
version = "0.1.0"
description = ""
authors = ["Simon Lundström <github-commits@soy.se>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
pylint = "^2.13.7"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
